--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,15 @@
     <div id="preloader" ng-show="successLodaing">
 
     </div>
+    <!--加载loadingS-->
+    <div id="loading" class="qm_loadingBlock" ng-if="loadingBlock">
+        <div class="qm_loadingBlock_content">
+            <div class="qm_loadingBlock_item qm_loadingBlock_item_Yellow"></div>
+            <div class="qm_loadingBlock_item qm_loadingBlock_item_Red"></div>
+            <div class="qm_loadingBlock_item qm_loadingBlock_item_Green"></div>
+        </div>
+    </div>
+    <!--加载loadingE-->
 </body>
 
 </html>
