--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 
     </div>
     <!--加载loadingS-->
-    <div id="loading" class="qm_loadingBlock">
+    <div id="loading" class="qm_loadingBlock" ng-if="loadingBlock">
         <div class="qm_loadingBlock_content">
             <div class="qm_loadingBlock_item qm_loadingBlock_item_Yellow"></div>
             <div class="qm_loadingBlock_item qm_loadingBlock_item_Red"></div>
